# treerep

./: .gitignore  CMakeLists.txt  README.md  test.cpp  treerep.cpp  treerep.hpp
data/: bio-celegans.mtx  bio-diseasome.mtx  graph1.mtx  immune.mtx
python/: pybind_func.h  requirements.txt  test.py  trep_util.py  wrapper.cc
src/: graph.cc  graph.h  test.cc  treerep.cc  treerep.h
test/: graphfunc.cc  immune.cc  immune_tree.mtx  randtree.cc  run_test.sh
